packages/webassemblyjs/test/fixtures/type-errors/select-mixed/exec.tjs
it("should throw an error during instantiation when type checking fails", () => {
  assert.throws(
    () => WebAssembly.instantiateFromSource(watmodule),
    "Type mismatch in select"
  );
});
